# ZAVhoz

./: .coverage 2  .coverage 3  .env 2.example  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  CONTEXT7_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  FEATURES.md  FINAL_REPORT.md  Makefile  NEXT_STEPS.md  PHASE2_FINAL_EXPANSION.md  PHASE2_LAUNCH.md  PHASE2_MEGA_MILESTONE.md  PHASE2_PROGRESS.md  PHASE2_README.md  PHASE2_SESSION_REPORT.md  PHASE3_COMPLETE.md  PHASE3_LAUNCH.md  PROJECT_STATUS.md  PROJECT_SUMMARY.txt  README.md  SUMMARY.txt  alembic.ini  alembic_init.txt  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  run_local.sh  test.db
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 31af69c22207_initial_migration_create_all_tables.py
bot/: __init__.py  main.py
database/: connection.py  migrations.py
handlers/: __init__.py  admin.py  create_request.py  files.py  menu.py  request_actions.py  start.py
models/: __init__.py  comment.py  file.py  request.py  user.py
tests/: conftest.py  test_advanced_scenarios.py  test_auth.py  test_edge_cases.py  test_error_conditions.py  test_file_workflows.py  test_validation.py
tests/integration/: test_request_workflow.py
tests/test_handlers/: test_admin.py  test_callbacks.py  test_create_request.py  test_files.py  test_menu.py  test_request_actions.py  test_start.py
tests/test_models/: test_comment_model.py  test_file_model.py  test_request_model.py  test_user_model.py
utils/: analytics.py  auth.py  export.py  keyboard.py  logging_config.py  messages.py  notifications.py  performance.py  rate_limiter.py  sentry_config.py  validation.py
